# scgpt-train

./: .gitignore  Makefile  pyproject.toml
configs/callbacks/: early_stopping.yaml  mnist.yaml  model_checkpoint.yaml  model_summary.yaml  rich_progress_bar.yaml  ssl.yaml
configs/module/: mnist.yaml
configs/trainer/: default.yaml
src/: eval.py  train.py  train_scgpt.py
src/callbacks/: light_progress_bar.py  wandb_callbacks.py
src/datamodules/: datamodules.py
src/modules/: multiple_module.py  single_module.py
src/modules/components/: lit_module.py
src/utils/: rich_utils.py  saving_utils.py  utils.py
